// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<button
  className=" ControlButton__StyledButton-jro3dx-2 ControlButton control-button  lgGsGV Button__StyledButton-bvtufj-1 fgUFOI"
  disabled={undefined}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <span />
</button>
`;

exports[`it renders a link 1`] = `
<a
  className=" ControlButton__StyledButton-jro3dx-2 ControlButton control-button  lgGsGV Button__StyledAnchor-bvtufj-2 jUvVDG"
  disabled={undefined}
  href="https://sprucebot.com"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <span />
</a>
`;
